--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     </div>
     <div class="Spending">
       <div class="days7">Spending - Last 7 days</div>
+      <!-- <div class="Chart"></div> -->
       <div class="Daysweek">
+        <div class="chartEl"></div>
+        <div class="daysList"></div> 
         <!-- <div class="Day"><p>mon</p></div>
         <div class="Day"><p>tue</p></div>
         <div class="Day"><p>wed</p></div>
