wykres + dni - flex

--- a/index.html
+++ b/index.html
@@ -26,14 +26,17 @@
       <!-- <div class="Chart"></div> -->
       <div class="Daysweek">
         <div class="chartEl"></div>
-        <div class="daysList"></div> 
-        <!-- <div class="Day"><p>mon</p></div>
-        <div class="Day"><p>tue</p></div>
-        <div class="Day"><p>wed</p></div>
-        <div class="Day"><p>thu</p></div>
-        <div class="Day"><p>fri</p></div>
-        <div class="Day"><p>sat</p></div>
-        <div class="Day"><p>san</p></div> -->
+        <div class="daysList"></div>
+        <div class="DaysNames">
+          <p>mon</p>
+          <p>tue</p>
+          <p>wed</p>
+          <p>thu</p>
+          <p>fri</p>
+          <p>sat</p>
+          <p>san</p>
+        </div> 
+        
       </div>  
       <hr>
       <div class="Resume">
